# mirror

./: .gitignore  CRUSH.md  README.md  index.html  package-lock.json  package.json  toolbar.html
.github/workflows/: release.yaml
src/: App.tsx  CategoryFilters.tsx  ClipCard.tsx  ClipCards.tsx  ClipDialog.tsx  GridVirtualizer.tsx  SettingsDialog.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  lib.rs  llm.rs  main.rs  settings.rs  shortcut.rs
src/components/: CategoryCombobox.tsx  ClipToolbar.tsx  ConfirmationDialog.tsx  DeleteConfirmationDialog.tsx  columns.tsx  data-table-column-header.tsx  data-table-pagination.tsx  data-table-search.tsx  data-table-toolbar.tsx  data-table-view-options.tsx  data-table.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  dialog.tsx  input.tsx
src/lib/: utils.ts
