[package]
name = "mirror"
version = "0.1.0"
description = "mirror"
authors = ["you"]
edition = "2021"

[lib]
name = "mirror_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.6.0"
global-hotkey = "0.7.0"
rusqlite = { version = "0.37.0", features = ["bundled", "vtab"] }
enigo = "0.5.0"
base64 = "0.22.1"
async-openai = "0.29.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

